--- a/Unicef/start_dreamweaver_first-website-2/completed/details.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/details.html
@@ -28,7 +28,7 @@ body {
   </header>
   <div id="hero">
     <p>Missing children/ Preregistration form</p>
-    <form id="form1" name="form1" method="post">
+    <form id="form1" action = "demo.php" name="form1" method="post">
       <p>Missing child
         <input type="checkbox" name="checkbox" id="checkbox">
       </p>
@@ -37,25 +37,25 @@ body {
       </p>
       <p>
         <label for="textfield">First Name: </label>
-        <input type="text" name="textfield" id="textfield">
+        <input type="text" name="firstname" id="textfield">
       </p>
       <p>
         <label for="textfield2">Last name:</label>
-        <input type="text" name="textfield2" id="textfield2">
+        <input type="text" name="lastname" id="textfield2">
       </p>
       <p>Father's name:
-        <input type="text" name="textfield6" id="textfield6">
+        <input type="text" name="fathername" id="textfield6">
       </p>
       <p>Mother's name:
-        <input type="text" name="textfield7" id="textfield7">
+        <input type="text" name="mothername" id="textfield7">
       </p>
       <p>
         <label for="textfield3">Age:</label>
-        <input type="number" name="number" id="number">
+        <input type="number" name="age" id="number">
       </p>
       <p>
         <label for="textfield4">Height:</label>
-        <input type="number" name="number2" id="number2">
+        <input type="number" name="height" id="number2">
       </p>
       <p>
         <label for="select">Gender:</label>
