--- a/Unicef/start_dreamweaver_first-website-2/completed/details.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/details.html
@@ -18,11 +18,13 @@ body {
     <h1><img src="../../Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
     <nav id="mainnav">
       <ul>
-        <li><a href="index.html" class="thispage">Home</a></li>
-        <li><a href="sightseeing.html">Sightseeing</a></li>
-        <li><a href="#">Eating Out</a></li>
-        <li><a href="#">What's On</a></li>
-        <li><a href="#">Where to Stay</a></li>
+        <li></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Login.html">Log in</a></li>
+        <li><a href="help.html" class="thispage">Help</a><a href="missing.html">Missing Children</a></li>
+        <li><a href="details.html">Registration Form</a></li>
+        <li></li>
+        <li></li>
       </ul>
     </nav>
   </header>
@@ -60,8 +62,8 @@ body {
       <p>
         <label for="select">Gender:</label>
         <select name="select" id="select" form="form1">
-          <option selected>Male</option>
-          <option>Female</option>
+          <option>M</option>
+          <option>F</option>
         </select>
       </p>
       <p>
@@ -81,7 +83,7 @@ body {
     </form>
   </div>
   <footer>
-    <p>&nbsp;</p>
+    <p>© Copyright 2014 unicef</p>
   </footer>
 </div>
 </body>
