--- a/Unicef/start_dreamweaver_first-website-2/completed/help.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/help.html
@@ -14,35 +14,56 @@
     <nav id="mainnav">
       <ul>
         <li></li>
-        <li><a href="sightseeing.html">Home</a></li>
-        <li><a href="#">LoGin</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Login.html">LoGin</a></li>
         <li><a href="index.html" class="thispage">Help</a></li>
         <li></li>
       </ul>
     </nav>
   </header>
-  <div id="hero">
-    <article>
-      <h2>Be Where It&rsquo;s At</h2>
-      <p>San Francisco is one of the most exciting and vibrant cities  on the planet. Bayside Beat is here to keep you informed of the best places to  see, where to eat, what to do, and where to lay down your weary head after an  action-packed day—or night—on the town.</p>
-    </article>
-  <img src="../images/golden_gate.jpg"  alt=""/></div>
   <article id="main">
-    <h2>Riding the Cable Cars</h2>
-    <p>No visit to San Francisco is complete without a ride on the  iconic cable cars that climb up the vertiginous hills of the city. Of the  twenty-three lines established between 1873 and 1890, three remain: two routes  from downtown near Union Square to <a href="http://www.fishermanswharf.org/">Fisherman's Wharf</a>, and a third route along  California Street.</p>
-    <p>The cable cars rely on cables running constantly beneath the  road&rsquo;s surface. The driver—or gripman—uses a lever to grip the cable to pull  the car and its passengers up the hill. The gripman requires not only great  strength, but also great skill. He needs to know where to release the cable to  coast over crossing cables and points. The conductor works in close cooperation  with the gripman, operating the brake at the rear of the car to prevent it from  running out of control on the downward slopes.</p>
-    <figure class="centered"><img src="../images/cable_car1.jpg" width="400" height="266"  alt=""/>
-      <figcaption>The cable car terminus near Union Square</figcaption>
-    </figure>
-    <p>Although the cable cars are now mainly a tourist attraction,  they&rsquo;re still used by local commuters to get to and from work. The California  Street line is particularly popular among commuters on weekdays.</p>
+    <h2>Help</h2>
+    <p>For any enquiry about Unicef's work for children, please contact our Supporter Care team: </p>
+    <p>By Telephone: 0300 330 5580 (Mon-Fri, 8am-6pm)<br>
+      By Email: Contact our Supporter Care Team</p>
+    <p>Or Write to us at: Unicef House, 30a Great Sutton Street, London, EC1V 0DU</p>
+    <p>If you have a query regarding any contact received from Unicef UK via telephone, please remember to include your relevant telephone number so that we can locate your details.</p>
+    <p>Cheques or postal orders should be made payable to Unicef UK and sent to our mailing address. </p>
+    <p>If you have a question regarding your donations to Unicef UK, our Donation Frequently Asked Questions may also have the answer for you.</p>
+    <p>In addition, we have Fundraising Frequently Asked Questions for Unicef.</p>
+    <p>For Rights Respecting School enquiries please email education@unicef.org.uk</p>
+    <p>For the Baby Friendly Initiative enquiries please email bfi@unicef.org.uk</p>
+    <p>For order enquiries, Unicef cards and gifts and Inspired Gifts:</p>
+    <p>Unicef<br>
+      PO Box 25<br>
+      Melton Mowbray<br>
+      Leicestershire LE13 1ZG<br>
+      Tel: 0344 888 5505<br>
+      Email: cards@unicef.org.uk</p>
+    <p>Inspired Gifts catalogues/orders - inspiredgifts@unicef.org.uk</p>
+    <p>For publications and educational resources:</p>
+    <p>Unicef<br>
+      PO Box 621,<br>
+      York House,<br>
+      Wetherby Rd,<br>
+      York YO26 0EX<br>
+      Tel: 0844 801 2413<br>
+      Email: unicefeducation@mosaic-fs.co.uk</p>
+    <p>For Baby Friendly resources and materials: bfi@unicef.org.uk</p>
+    <p>For press and media enquiries:<br>
+      Unicef UK Media Relations team<br>
+      Tel: 020 7375 6030<br>
+      Email: media@Unicef.org.uk</p>
+    <p>Our main office and mailing address is:<br>
+      Unicef House<br>
+      30a Great Sutton Street<br>
+      London<br>
+      EC1V 0DU<br>
+      Tel: 0207 490 2388<br>
+      Fax: 0207 250 1733</p>
   </article>
-  <aside id="sidebar">
-    <h2>Cable Car Tips</h2>
-    <p>A single ride on a cable car costs $6. If you plan to travel  around the city, it&rsquo;s often cheaper to buy a <a href="http://www.sfmta.com/cms/mfares/passports.htm">Muni Passport</a>, which gives you  unlimited rides on San Francisco&rsquo;s extensive public transport system, including  the cable cars (but not the <a href="http://www.bart.gov/">BART subway system</a>). Even a single-day passport  ($14) will save you money if you make a return trip, and stop off to visit  Chinatown one way.</p>
-    <p>There are often long lines at the cable car terminus,  particularly on the Powell-Mason and Powell-Hyde routes. If you don&rsquo;t want to  wait, try walking a few stops along the route. The conductor usually leaves a  small number of places to pick up passengers on the way. The California Street  route is generally less crowded (but not as spectacular).</p>
-  </aside>
   <footer>
-    <p>© Copyright 2013 Bayside Beat</p>
+    <p>© Copyright 2014 unicef</p>
   </footer>
 </div>
 </body>
