--- a/Unicef/start_dreamweaver_first-website-2/completed/index.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/index.html
@@ -31,10 +31,19 @@ body {
   </header>
   <article id="main">
     <h2>What we do ?</h2>
-    <p>&nbsp;</p>
+    <p><strong>Education</strong></p>
+    <p>UNICEF takes a holistic approach to education, ensuring children are not only taught how to read and write, but are equipped with the knowledge to be active members of society. We call our approach 'Child-Friendly Schools'. </p>
+    <p><strong>Child survival and development</strong></p>
+    <p>Ensuring the survival of all children is the backbone of UNICEF’s work. From maternal health care to vaccinating children, from ensuring access to clean water and proper sanitation to early childhood education, we want to make certain that children survive and thrive all the way to adulthood.</p>
+    <p><strong>Child Protection</strong></p>
+    <p>UNICEF strives to create a protective environment for all children that prevents abuse, and provides support to children who have been victims. Understanding the underlying causes and addressing this interconnectedness is key. We believe all children have the right to be protected.</p>
+    <p><strong>HIV/AIDS</strong></p>
+    <p>HIV is not a death sentence. There is still a long way to go, but we’re closer than ever to seeing the first generation of children born HIV-free. We believe all children and young people have the right to life and dignity in the face of HIV and AIDS.</p>
+    <p><strong>Water and sanitation</strong></p>
+    <p>Worldwide one in nine people do not have access to safe, clean water. Lack of clean water and safe sanitation affects every area of a person's life: education, health and poverty. - See more at: http://www.unicef.org.au/Discover/What-we-do.aspx#sthash.nOLMOBCo.dpuf</p>
   </article>
   <footer>
-    <p>© Copyright 2013 Bayside Beat</p>
+    <p>© Copyright 2014 unicef</p>
   </footer>
 </div>
 </body>
