--- a/Unicef/start_dreamweaver_first-website-2/completed/Login.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/Login.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>Bayside Beat: Cable Cars</title>
 <link href="styles/main.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+body {
+	background-image: url(../../Images/background.jpg);
+}
+</style>
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/source-sans-pro:n6:default.js" type="text/javascript"></script>
 </head>
 
@@ -21,13 +26,12 @@
       </ul>
     </nav>
   </header>
-  <div id="hero"></div>
   <article id="main">
     <p>
-    	<div>
+   	<div>
       <label for="textfield">Username:</label>
       <input type="text" name="textfield" id="textfield" class="displayed">
-      	</div>
+   	</div>
     </p>
     <p>
       <label for="password" class="displayed">Password:</label>
@@ -43,7 +47,7 @@
     <p>&nbsp;</p>
   </article>
   <footer>
-    <p>&nbsp;</p>
+    <p>© Copyright 2014 unicef</p>
   </footer>
 </div>
 </body>
