--- a/Unicef/details.html
+++ b/Unicef/details.html
@@ -2,84 +2,89 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
-
+<title>Bayside Beat: Cable Cars</title>
+<link href="styles/main.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-h1,h2,h3,h4,h5,h6 {
-	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
-	width: 0vmin;
-}
 body {
-	background-color: #F2A122;
-	background-image: url(Images/background.jpg);
+	background-color: #3EADE4;
 }
 </style>
-<link href="bootstrap-theme.css" rel="stylesheet" type="text/css">
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/source-sans-pro:n6:default.js" type="text/javascript"></script>
 </head>
 
-<body text="#150001">
-<p align="right"><a href="missingChildren.html"></a></p>
-<table width="422" border="1">
-  <tbody>
-    <tr>
-      <td><a href="missingChildren.html">Missing Children</a></td>
-      <td><a href="Help.html">Help</a></td>
-      <td><a href="Home.html">Log Out</a></td>
-    </tr>
-  </tbody>
-</table>
-<p align="right">&nbsp;</p>
-<p>Missing children/ Preregistration form</p>
-<form id="form1" name="form1" method="post">
-  <p>Missing child 
-    <input type="checkbox" name="checkbox" id="checkbox">
-  </p>
-  <p>Register child 
-    <input type="checkbox" name="checkbox2" id="checkbox2">
-  </p>
-  <p>
-    <label for="textfield">First Name:  </label>
-    <input type="text" name="textfield" id="textfield">
-  </p>
-  <p>
-    <label for="textfield2">Last name:</label>
-      	<input type="text" name="textfield2" id="textfield2">
-  </p>
-  <p>Father's name:
-    <input type="text" name="textfield6" id="textfield6">
-  </p>
-  <p>Mother's name:
-    <input type="text" name="textfield7" id="textfield7">
-  </p>
-  <p>
-    <label for="textfield3">Age:</label>
-    <input type="number" name="number" id="number">
-  </p>
-  <p>
-    <label for="textfield4">Height:</label>
-    <input type="number" name="number2" id="number2">
-  </p>
-  <p>
-    <label for="select">Gender:</label>
-    <select name="select" id="select" form="form1">
-      <option selected>Male</option>
-      <option>Female</option>
-    </select>
-  </p>
-  <p>
-    <label for="textfield6">Date last seen:</label>
-    <input type="datetime" name="datetime" id="datetime">
-  </p>
-  <p>Location last seen:
-    <input type="text" name="textfield5" id="textfield5">
-  </p>
-  <p>
-    <label for="textfield8">Other distinguishing features</label>
-    <textarea name="textarea" id="textarea"></textarea>
-  </p>
-  <p>&nbsp;</p>
-  <p>&nbsp; </p>
-</form>
-<p>&nbsp;</p>
+<body>
+<div id="wrapper">
+  <header id="top">
+    <h1><img src="../../Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
+    <nav id="mainnav">
+      <ul>
+        <li></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Login.html">Log in</a></li>
+        <li><a href="help.html" class="thispage">Help</a><a href="missing.html">Missing Children</a></li>
+        <li><a href="details.html">Registration Form</a></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
+  </header>
+  <div id="hero">
+    <p>Missing children/ Preregistration form</p>
+    <form id="form1" action = "insertmissingrecord.php" name="missingform" method="post">
+      <p>Missing child
+        <input type="checkbox" name="lost" id="checkbox">
+      </p>
+      <p>Register child
+        <input type="checkbox" name="checkbox2" id="checkbox2">
+      </p>
+      <p>
+        <label for="textfield">First Name: </label>
+        <input type="text" name="firstname" id="textfield">
+      </p>
+      <p>
+        <label for="textfield2">Last name:</label>
+        <input type="text" name="lastname" id="textfield2">
+      </p>
+      <p>Father's name:
+        <input type="text" name="fathername" id="textfield6">
+      </p>
+      <p>Mother's name:
+        <input type="text" name="mothername" id="textfield7">
+      </p>
+      <p>
+        <label for="textfield3">Age:</label>
+        <input type="number" name="age" id="number">
+      </p>
+      <p>
+        <label for="textfield4">Height:</label>
+        <input type="number" name="height" id="number2">
+      </p>
+      <p>
+        <label for="select">Gender:</label>
+        <select name="select" id="gender" form="genderform">
+          <option>M</option>
+          <option>F</option>
+        </select>
+      </p>
+      <p>
+        <label for="textfield6">Date last seen:</label>
+        <input type="datetime" name="lastseentime" id="datetime">
+      </p>
+      <p>Location last seen:
+        <input type="text" name="lastseenplace" id="textfield5">
+      </p>
+      <p>
+        <label for="textfield8">Other distinguishing features</label>
+        <textarea name="distinguishingfeatures" id="textarea"></textarea>
+      </p>
+      <p>
+        <input type="submit" name="submit" id="submit" value="Submit">
+      </p>
+    </form>
+  </div>
+  <footer>
+    <p>© Copyright 2014 unicef</p>
+  </footer>
+</div>
 </body>
 </html>
