--- a/Unicef/start_dreamweaver_first-website-2/completed/details.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/details.html
@@ -83,7 +83,7 @@ body {
         <textarea name="distinguishingfeatures" id="textarea"></textarea>
       </p>
       <p>
-        <input type="submit" name="submit" id="submit" value="Submit">
+        <input type="submit" name="submit" id="submit" value="submit">
       </p>
     </form>
   </div>
