--- a/Unicef/start_dreamweaver_first-website-2/completed/found.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/found.html
@@ -23,21 +23,15 @@ body {
         <li><a href="index.html">Home</a></li>
         <li><a href="Login.html">Log in</a></li>
         <li><a href="help.html">Help</a><a href="missing.html">Missing Children</a></li>
-        <li><a href="details.html" class="thispage">Registration form</a></li>
+        <li><a href="details.html">Registration Form</a><a href="found.html" class="thispage">FOund</a></li>
         <li></li>
         <li></li>
       </ul>
     </nav>
   </header>
   <div id="hero">
-    <p>Missing children/ Preregistration form</p>
+    <p>Found</p>
     <form id="form1" name="form1" method="post">
-    <p>Missing child
-        <input type="checkbox" name="lost" id="checkbox">
-      </p>
-      <p>Register child
-        <input type="checkbox" name="checkbox2" id="checkbox2">
-      </p>
       <p>
         <label for="textfield">First Name: </label>
         <input type="text" name="textfield" id="textfield">
@@ -46,40 +40,11 @@ body {
         <label for="textfield2">Last name:</label>
         <input type="text" name="textfield2" id="textfield2">
       </p>
-      <p>Father's name:
-        <input type="text" name="textfield6" id="textfield6">
-      </p>
-      <p>Mother's name:
-        <input type="text" name="textfield7" id="textfield7">
+      <p>Found 
+        <input type="checkbox" name="checkbox" id="checkbox">
       </p>
       <p>
-        <label for="textfield3">Age:</label>
-        <input type="number" name="number" id="number">
-      </p>
-      <p>
-        <label for="textfield4">Height:</label>
-        <input type="number" name="number2" id="number2">
-      </p>
-      <p>
-        <label for="select">Gender:</label>
-        <select name="select" id="gender" form="genderform">
-          <option>M</option>
-          <option>F</option>
-        </select>
-      </p>
-      <p>
-        <label for="textfield6">Date last seen:</label>
-        <input type="datetime" name="lastseentime" id="datetime">
-      </p>
-      <p>Location last seen:
-        <input type="text" name="lastseenplace" id="textfield5">
-      </p>
-      <p>
-        <label for="textfield8">Other distinguishing features</label>
-        <textarea name="distinguishingfeatures" id="textarea"></textarea>
-      </p>
-      <p>
-        <input type="submit" name="submit" id="submit" value="submit">
+        <input type="submit" name="submit" id="submit" value="Submit">
       </p>
     </form>
   </div>
