changed img path

--- a/Unicef/index.html
+++ b/Unicef/index.html
@@ -23,7 +23,7 @@ body {
         <li><a href="help.html">Help</a></li>
       </ul>
       <p>&nbsp;</p>
-      <p><img src="../../Images/UNICEF_Day_for_Children_2012.jpg" alt="" width="558" height="372" class="displayed" align="absmiddle"/></p>
+      <p><img src="Images/UNICEF_Day_for_Children_2012.jpg" alt="" width="558" height="372" class="displayed" align="absmiddle"/></p>
       <ul>
         <li></li>
       </ul>
