--- a/Unicef/found.html
+++ b/Unicef/found.html
@@ -16,7 +16,7 @@ body {
 <body>
 <div id="wrapper">
   <header id="top">
-    <h1><img src="../../Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
+    <h1><img src="Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
     <nav id="mainnav">
       <ul>
         <li></li>
