--- a/Unicef/start_dreamweaver_first-website-2/completed/index.html
+++ b/Unicef/start_dreamweaver_first-website-2/completed/index.html
@@ -40,7 +40,7 @@ body {
     <p><strong>HIV/AIDS</strong></p>
     <p>HIV is not a death sentence. There is still a long way to go, but we’re closer than ever to seeing the first generation of children born HIV-free. We believe all children and young people have the right to life and dignity in the face of HIV and AIDS.</p>
     <p><strong>Water and sanitation</strong></p>
-    <p>Worldwide one in nine people do not have access to safe, clean water. Lack of clean water and safe sanitation affects every area of a person's life: education, health and poverty. - See more at: http://www.unicef.org.au/Discover/What-we-do.aspx#sthash.nOLMOBCo.dpuf</p>
+    <p>&nbsp;</p>
   </article>
   <footer>
     <p>© Copyright 2014 unicef</p>
