--- a/Unicef/missing.html
+++ b/Unicef/missing.html
@@ -10,7 +10,7 @@
 <body>
 <div id="wrapper">
   <header id="top">
-    <h1><img src="../../Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
+    <h1><img src="Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
     <nav id="mainnav">
       <ul>
         <li></li>
