--- a/Unicef/details.html
+++ b/Unicef/details.html
@@ -53,11 +53,11 @@ body {
       </p>
       <p>
         <label for="textfield3">Age:</label>
-        <input type="number" name="age" id="number">
+        <input type="text" name="age" id="number">
       </p>
       <p>
         <label for="textfield4">Height:</label>
-        <input type="number" name="height" id="number2">
+        <input type="text" name="height" id="number2">
       </p>
       <p>
         <label for="select">Gender:</label>
@@ -68,7 +68,7 @@ body {
       </p>
       <p>
         <label for="textfield6">Date last seen:</label>
-        <input type="datetime" name="lastseentime" id="datetime">
+        <input type="text" name="lastseentime" id="datetime">
       </p>
       <p>Location last seen:
         <input type="text" name="lastseenplace" id="textfield5">
