--- a/Unicef/details.html
+++ b/Unicef/details.html
@@ -18,13 +18,12 @@ body {
     <h1><img src="Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
     <nav id="mainnav">
       <ul>
-        <li></li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Login.html">Log in</a></li>
-        <li><a href="help.html" class="thispage">Help</a><a href="missing.html">Missing Children</a></li>
+        <li><a href="Login.html">Login</a></li>
+        <li><a href="Help.html">help</a></li>
+        <li><a href="missing.html" class="thispage">Missing Children</a></li>
         <li><a href="details.html">Registration Form</a></li>
-        <li></li>
-        <li></li>
+        <li><a href="found.html" class="thispage">Found</a></li>
       </ul>
     </nav>
   </header>
