--- a/Unicef/found.html
+++ b/Unicef/found.html
@@ -19,13 +19,12 @@ body {
     <h1><img src="Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
     <nav id="mainnav">
       <ul>
-        <li></li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Login.html">Log in</a></li>
-        <li><a href="help.html">Help</a><a href="missing.html">Missing Children</a></li>
-        <li><a href="details.html">Registration Form</a><a href="found.html" class="thispage">FOund</a></li>
-        <li></li>
-        <li></li>
+        <li><a href="Login.html">Login</a></li>
+        <li><a href="Help.html">help</a></li>
+        <li><a href="missing.html" class="thispage">Missing Children</a></li>
+        <li><a href="details.html">Registration Form</a></li>
+        <li><a href="found.html" class="thispage">Found</a></li>
       </ul>
     </nav>
   </header>
@@ -35,14 +34,14 @@ body {
       <p>
         <label for="textfield">First Name: </label>
         <input type="text" name="textfield" id="textfield">
-      </p>
-      <p>
-        <label for="textfield2">Last name:</label>
+        <label for="textfield2">Last Name:</label>
         <input type="text" name="textfield2" id="textfield2">
+      Found
+      :
+      <input type="checkbox" name="checkbox" id="checkbox">
       </p>
-      <p>Found 
-        <input type="checkbox" name="checkbox" id="checkbox">
-      </p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
       <p>
         <input type="submit" name="submit" id="submit" value="Submit">
       </p>
