--- a/Unicef/missing.html
+++ b/Unicef/missing.html
@@ -16,8 +16,10 @@
         <li></li>
         <li><a href="index.html">Home</a></li>
         <li><a href="Login.html">Login</a></li>
-        <li><a href="help.html">help</a></li>
-        <li><a href="missing.html" class="thispage">Missing Children</a><a href="details.html">Registration Form</a></li>
+        <li><a href="Help.html">help</a></li>
+        <li><a href="missing.html" class="thispage">Missing Children</a></li>
+        <li><a href="details.html">Registration Form</a></li>
+        <li><a href="found.html" class="thispage">Found</a></li>
       </ul>
     </nav>
   </header>
