--- a/Unicef/Login.html
+++ b/Unicef/Login.html
@@ -38,7 +38,9 @@ body {
        <input type="password" name="password" id="password">
     </p>
     <div></div>
-    <p>&nbsp;</p>
+    <p>
+  	<input type="submit" name="submit" id="submit" value="Submit">
+    </p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
