home page changed
blah

--- a/Unicef/Help.html
+++ b/Unicef/Help.html
@@ -15,10 +15,10 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Login.html">Login</a></li>
-        <li><a href="Help.html">help</a></li>
-        <li><a href="missing.html" class="thispage">Missing Children</a></li>
+        <li><a href="Help.html" class="thispage">help</a></li>
+        <li><a href="missing.html">Missing Children</a></li>
         <li><a href="details.html">Registration Form</a></li>
-        <li><a href="found.html" class="thispage">Found</a></li>
+        <li><a href="found.html">Found</a></li>
       </ul>
     </nav>
   </header>
