--- a/Unicef/index.html
+++ b/Unicef/index.html
@@ -18,12 +18,12 @@ body {
     <h1><img src="Images/graphics-unicef-842824.gif" alt="" width="180" height="53" align="left"/></h1>
     <nav id="mainnav">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="thispage">Home</a></li>
         <li><a href="Login.html">Login</a></li>
         <li><a href="Help.html">help</a></li>
-        <li><a href="missing.html" class="thispage">Missing Children</a></li>
-        <li><a href="details.html">Registration Form</a></li>
-        <li><a href="found.html" class="thispage">Found</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
       <p>&nbsp;</p>
       <p><img src="Images/UNICEF_Day_for_Children_2012.jpg" alt="" width="558" height="372" class="displayed" align="absmiddle"/></p>
