--- a/Unicef/missing.html
+++ b/Unicef/missing.html
@@ -19,7 +19,7 @@
         <li><a href="Help.html">help</a></li>
         <li><a href="missing.html" class="thispage">Missing Children</a></li>
         <li><a href="details.html">Registration Form</a></li>
-        <li><a href="found.html" class="thispage">Found</a></li>
+        <li><a href="found.html">Found</a></li>
       </ul>
     </nav>
   </header>
