--- a/Unicef/Login.html
+++ b/Unicef/Login.html
@@ -27,6 +27,7 @@ body {
     </nav>
   </header>
   <article id="main">
+    <form action = "login.php" name = "loginform" method = "post">
     <p>
    	<div>
       <label for="textfield">Username:</label>
@@ -41,6 +42,7 @@ body {
     <p>
   	<input type="submit" name="submit" id="submit" value="Submit">
     </p>
+  </form>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
