--- a/Unicef/LandPage.html
+++ b/Unicef/LandPage.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Login.html">Login</a></li>
-        <li><a href="Help.html" class="thispage">help</a></li>
+        <li><a href="Help.html">help</a></li>
         <li><a href="missing.html">Missing Children</a></li>
         <li><a href="details.html">Registration Form</a></li>
         <li><a href="found.html">Found</a></li>
@@ -23,45 +23,8 @@
     </nav>
   </header>
   <article id="main">
-    <h2>Help</h2>
-    <p>For any enquiry about Unicef's work for children, please contact our Supporter Care team: </p>
-    <p>By Telephone: 0300 330 5580 (Mon-Fri, 8am-6pm)<br>
-      By Email: Contact our Supporter Care Team</p>
-    <p>Or Write to us at: Unicef House, 30a Great Sutton Street, London, EC1V 0DU</p>
-    <p>If you have a query regarding any contact received from Unicef UK via telephone, please remember to include your relevant telephone number so that we can locate your details.</p>
-    <p>Cheques or postal orders should be made payable to Unicef UK and sent to our mailing address. </p>
-    <p>If you have a question regarding your donations to Unicef UK, our Donation Frequently Asked Questions may also have the answer for you.</p>
-    <p>In addition, we have Fundraising Frequently Asked Questions for Unicef.</p>
-    <p>For Rights Respecting School enquiries please email education@unicef.org.uk</p>
-    <p>For the Baby Friendly Initiative enquiries please email bfi@unicef.org.uk</p>
-    <p>For order enquiries, Unicef cards and gifts and Inspired Gifts:</p>
-    <p>Unicef<br>
-      PO Box 25<br>
-      Melton Mowbray<br>
-      Leicestershire LE13 1ZG<br>
-      Tel: 0344 888 5505<br>
-      Email: cards@unicef.org.uk</p>
-    <p>Inspired Gifts catalogues/orders - inspiredgifts@unicef.org.uk</p>
-    <p>For publications and educational resources:</p>
-    <p>Unicef<br>
-      PO Box 621,<br>
-      York House,<br>
-      Wetherby Rd,<br>
-      York YO26 0EX<br>
-      Tel: 0844 801 2413<br>
-      Email: unicefeducation@mosaic-fs.co.uk</p>
-    <p>For Baby Friendly resources and materials: bfi@unicef.org.uk</p>
-    <p>For press and media enquiries:<br>
-      Unicef UK Media Relations team<br>
-      Tel: 020 7375 6030<br>
-      Email: media@Unicef.org.uk</p>
-    <p>Our main office and mailing address is:<br>
-      Unicef House<br>
-      30a Great Sutton Street<br>
-      London<br>
-      EC1V 0DU<br>
-      Tel: 0207 490 2388<br>
-      Fax: 0207 250 1733</p>
+    <h2>&nbsp;</h2>
+    <p>Login successful !</p>
   </article>
   <footer>
     <p>© Copyright 2014 unicef</p>
