--- a/Unicef/found.html
+++ b/Unicef/found.html
@@ -30,17 +30,13 @@ body {
   </header>
   <div id="hero">
     <p>Found</p>
-    <form id="form1" name="form1" method="post">
+    <form id="form1" name="searchform" method="post" action="query.php">
       <p>
         <label for="textfield">First Name: </label>
-        <input type="text" name="textfield" id="textfield">
+        <input type="text" name="firstname" id="textfield">
         <label for="textfield2">Last Name:</label>
-        <input type="text" name="textfield2" id="textfield2">
-      Found
-      :
-      <input type="checkbox" name="checkbox" id="checkbox">
+        <input type="text" name="lastname" id="textfield2">
       </p>
-      <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p>
         <input type="submit" name="submit" id="submit" value="Submit">
