--- a/Unicef/Login.html
+++ b/Unicef/Login.html
@@ -30,7 +30,7 @@ body {
     <p>
    	<div>
       <label for="textfield">Username:</label>
-      <input type="text" name="textfield" id="textfield" class="displayed">
+      <input type="text" name="username" id="textfield" class="displayed">
    	</div>
     </p>
     <p>
