--- a/Unicef/Login.html
+++ b/Unicef/Login.html
@@ -26,11 +26,13 @@ body {
       </ul>
     </nav>
   </header>
-  <article id="main">
+  <article id="main"
     <p>
    	<div>
+      <form action = "login.php" method = "post" name = "loginbox">
       <label for="textfield">Username:</label>
-      <input type="text" name="username" id="textfield" class="displayed">
+      <input type="text" name="username" id="username" class="displayed">
+    </form>
    	</div>
     </p>
     <p>
