--- a/Unicef/Login.html
+++ b/Unicef/Login.html
@@ -28,11 +28,12 @@ body {
   </header>
   <article id="main"
     <p>
-   	<div>
-      <form action = "login.php" method = "post" name = "loginbox">
+   	<form action = "login.php" method = "post">
+    <div>
+      
       <label for="textfield">Username:</label>
       <input type="text" name="username" id="username" class="displayed">
-    </form>
+  
    	</div>
     </p>
     <p>
@@ -43,6 +44,7 @@ body {
     <p>
   	<input type="submit" name="submit" id="submit" value="Submit">
     </p>
+  </form>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
