--- a/maps.html
+++ b/maps.html
@@ -11,7 +11,7 @@
     </script>
   </head>
   <body>
-    <h1>Jat's web app</h1>
+    <h1>Maps</h1>
 <div id="map-canvas"></div>
 <div id="noble-api"></div>
 <?php include 'maps.php';?>
