--- a/Unicef/missing.html
+++ b/Unicef/missing.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Bayside Beat: Cable Cars</title>
+<meta charse	t="utf-8">
+<title>Missing</title>
 <link href="styles/main.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/source-sans-pro:n6:default.js" type="text/javascript"></script>
 </head>
@@ -23,10 +23,37 @@
       </ul>
     </nav>
   </header>
-  <form id="form1" name="form1" method="post">
-    <label for="textfield">Name:</label>
-    <input type="text" name="textfield" id="textfield">
-  </form>
+ 		<table>
+        <thead>
+            <tr>
+                <td>Id</td>
+                <td>First Name</td>
+                <td>Last Name</td>
+                <td>age</td>
+            </tr>
+        </thead>
+        <tbody>
+        <?php
+            $connect = mysql_connect("db4free.net","ateam", "shubham");
+            if (!$connect) {
+                die(mysql_error());
+            }
+            mysql_select_db("unification");
+            $results = mysql_query("SELECT * FROM missing);
+            while($row = mysql_fetch_array($results)) {
+            ?>
+                <tr>
+                    <td><?php echo $row['id']?></td>
+                    <td><?php echo $row['firstname']?></td>
+                    <td><?php echo $row['lastname']?></td>
+                    <td><?php echo $row['age']?></td>
+                </tr>
+
+            <?php
+            }
+            ?>
+            </tbody>
+            </table>
 </div>
 </body>
 </html>
