--- a/Unicef/found.html
+++ b/Unicef/found.html
@@ -32,10 +32,8 @@ body {
     <p>Found</p>
     <form id="form1" name="form1" method="post" action="query.php">
       <p>
-        <label for="textfield">First Name: </label>
+        <label for="textfield">Name: </label>
         <input type="text" name="firstname" id="textfield">
-        <label for="textfield2">Last Name:</label>
-        <input type="text" name="lastname" id="textfield2">
       </p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
