--- a/Unicef/details.html
+++ b/Unicef/details.html
@@ -53,7 +53,7 @@ body {
       </p>
       <p>
         <label for="textfield3">Contact details:</label>
-        <input type="text" name="textfield3" id="textfield3">
+        <input type="text" name="contact" id="contact">
       </p>
       <p>
         <label for="textfield3">Age:</label>
@@ -79,6 +79,7 @@ body {
         <label for="textfield">features: </label>
         <input type="text" name="distinguishingfeatures" id="textfield">
       </p>
+      
       <p>
         <input type="submit" name="submit" id="submit" value="Submit">
       </p>
