--- a/Unicef/missing.html
+++ b/Unicef/missing.html
@@ -25,7 +25,7 @@
   </header>
 
 <form action = "table.php" form id="form1" name="form1" method="post">
-   <input type = "submit" value = "submit" name = "submit">
+   <div align = "center"><input type = "submit" value = "submit" name = "submit"></div>
     
   </form>
 
